# file_server

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
client/: client-interface.c  client-interface.h  client.c
server/: server.c
tools/: backend-client.c  backend-server.c  backend.c  backend.h  constants.h  request.c  request.h  utilities.h
